# protein-sssl-operator

./: .gitignore  AUTONOMOUS_COMPLETION_REPORT.md  AUTONOMOUS_RESEARCH_PUBLICATION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  GLOBAL_DEPLOYMENT_FEATURES.md  README.md  TERRAGON_AUTONOMOUS_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  TERRAGON_SDLC_REPORT.md  comprehensive_quality_gates.py  comprehensive_test_report.json  demo_basic_minimal.py  demo_statistical_validation.json  environment.yml  production_deployment_system.py  pyproject.toml  quality_gates_report.json  quantum_scale_performance_final.json  robust_protein_system.py  scalable_protein_system.py  setup.py
.github/workflows/: ci-cd.yml
configs/: folding_config.yaml  ssl_config.yaml
deployment/: autonomous-production-deploy.sh  global-deployment.sh  production-deploy.sh
deployment/regional-templates/: asia-deployment.sh  eu-deployment.sh  global-multi-region.sh  us-deployment.sh
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: API_REFERENCE.md  API_REFERENCE_COMPLETE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  COMPLIANCE_LEGAL.md  DEVELOPER_GUIDE.md  OPERATIONS_MAINTENANCE.md  PRODUCTION_DEPLOYMENT.md  RESEARCH_ACADEMIC.md  USER_GUIDES.md
helm/protein-sssl/: Chart.yaml  values.yaml
kubernetes/: autoscaling.yaml  deployment.yaml  monitoring.yaml  persistent-volumes.yaml
protein_sssl/: __init__.py
protein_sssl/analysis/: domain_analysis.py
protein_sssl/cli/: __init__.py  evaluate.py  main.py  predict.py  train.py
protein_sssl/config/: __init__.py  config_manager.py  defaults.py  torch_free_defaults.py
protein_sssl/data/: sequence_dataset.py  structure_dataset.py
protein_sssl/deployment/: autonomous_deployment_orchestrator.py  autonomous_production_orchestrator.py
protein_sssl/evaluation/: structure_metrics.py
protein_sssl/models/: neural_operator.py  next_gen_predictor.py  ssl_encoder.py  structure_decoder.py
protein_sssl/optimization/: quantum_performance_engine.py
protein_sssl/reliability/: fault_tolerance_system.py
protein_sssl/research/: __init__.py  acceleration_techniques.py  adaptive_neural_architecture_search.py  advanced_fourier_operators.py  autonomous_learning_framework.py  bayesian_uncertainty.py  breakthrough_meta_learning_engine.py  breakthrough_uncertainty_enhancements.py  comprehensive_quality_framework.py  experimental_framework.py  federated_research_hub.py  gpu_cluster_quantum_optimization.py  integrated_research_framework.py  mathematical_documentation.py  novel_ssl_objectives.py  production_robustness_framework.py  quantum_scale_optimization.py  statistical_validation_framework.py  torch_free_neural_framework.py
protein_sssl/security/: advanced_security_framework.py
protein_sssl/testing/: ai_powered_quality_gates.py
protein_sssl/training/: folding_trainer.py  ssl_trainer.py
protein_sssl/utils/: accessibility_framework.py  adaptive_scaling.py  advanced_autoscaling.py  advanced_caching.py  advanced_error_handling.py  autonomous_quality.py  benchmarking_suite.py  compliance_framework.py  compliance_monitoring.py  compute_optimization.py  cultural_adaptation.py  distributed.py  distributed_computing.py  dynamic_config_manager.py  enterprise_monitoring.py  monitoring.py  (+28 more)
scripts/: ci-cd.sh  demo_basic_functionality.py  predict_structure.py  pretrain_ssl.py  quality_gates.py  run_tests.sh  test_generation1_minimal.py  test_generation1_working.py  test_generation2_robust.py  test_generation2_working.py  test_generation3_scale.py  test_global_deployment.py  test_imports.py  test_minimal_functionality.py  test_robustness.py  test_robustness_minimal.py  test_scaling.py  test_scaling_minimal.py
test_reports/: secrets_check.txt  test_summary_20250823_035602.md
tests/: test_cli.py  test_config.py  test_data.py  test_integration.py  test_models.py  test_monitoring.py  test_performance.py  test_security.py
(+5 files in other folders)
